--- a/school.ipynb
+++ b/school.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime\n",
+    "import json\n"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +81,21 @@
     "    \"subjects\": ['AI and cloud','RDBMS','Advance Stats','Data viz'], \n",
     "    \"enrollment_date\": datetime(2024,5,12)\n",
     "  },\n",
-    "   {  \"_id\": 103, \n",
+    "   {  \"_id\": 102, \n",
     "    \"name\": \"Akshath Pai\", \n",
     "    \"age\": 26, \n",
     "    \"grade\": 'A', \n",
     "    \"subjects\": ['control unit','CAAD','Advance Stats','Data viz'], \n",
     "    \"enrollment_date\": datetime(2024,4,12)\n",
     "  },\n",
-    "   {  \"_id\": 104, \n",
+    "   {  \"_id\": 103, \n",
     "    \"name\": \"Subhodh Kalley\", \n",
     "    \"age\": 27, \n",
     "    \"grade\": 'C', \n",
     "    \"subjects\": ['basic stats','data science','Advance Stats','Data viz'], \n",
     "    \"enrollment_date\": datetime(2023,11,12)\n",
     "  },\n",
-    "   {  \"_id\": 105, \n",
+    "   {  \"_id\": 104, \n",
     "    \"name\": \"Chiranth \", \n",
     "    \"age\": 27, \n",
     "    \"grade\": 'A', \n",
@@ -107,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeleteResult({'n': 5, 'ok': 1.0}, acknowledged=True)"
+       "DeleteResult({'n': 4, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([100, 101, 103, 104, 105], acknowledged=True)"
+       "InsertManyResult([100, 101, 102, 103, 104], acknowledged=True)"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -168,19 +169,19 @@
        "  'grade': 'B',\n",
        "  'subjects': ['AI and cloud', 'RDBMS', 'Advance Stats', 'Data viz'],\n",
        "  'enrollment_date': datetime.datetime(2024, 5, 12, 0, 0)},\n",
-       " {'_id': 103,\n",
+       " {'_id': 102,\n",
        "  'name': 'Akshath Pai',\n",
        "  'age': 26,\n",
        "  'grade': 'A',\n",
        "  'subjects': ['control unit', 'CAAD', 'Advance Stats', 'Data viz'],\n",
        "  'enrollment_date': datetime.datetime(2024, 4, 12, 0, 0)},\n",
-       " {'_id': 104,\n",
+       " {'_id': 103,\n",
        "  'name': 'Subhodh Kalley',\n",
        "  'age': 27,\n",
        "  'grade': 'C',\n",
        "  'subjects': ['basic stats', 'data science', 'Advance Stats', 'Data viz'],\n",
        "  'enrollment_date': datetime.datetime(2023, 11, 12, 0, 0)},\n",
-       " {'_id': 105,\n",
+       " {'_id': 104,\n",
        "  'name': 'Chiranth ',\n",
        "  'age': 27,\n",
        "  'grade': 'A',\n",
@@ -188,7 +189,7 @@
        "  'enrollment_date': datetime.datetime(2024, 1, 12, 0, 0)}]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "UpdateResult({'n': 4, 'nModified': 4, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeleteResult({'n': 0, 'ok': 1.0}, acknowledged=True)"
+       "DeleteResult({'n': 1, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,21 +271,21 @@
    "source": [
     "#Q4: Remove a student from the database using their _id.\n",
     "delete_log=collection.delete_one(\n",
-    "    {'_id':5}\n",
+    "    {'_id':104}\n",
     ")\n",
     "delete_log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grade: A, Count: 3\n",
+      "Grade: A, Count: 2\n",
       "Grade: B, Count: 1\n",
       "Grade: C, Count: 1\n"
      ]
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        "InsertManyResult([1, 2, 3, 4, 5], acknowledged=True)"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
        "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,19 +376,38 @@
     "    {'_id':102},\n",
     "    {'$set':{'subject_ids':[1,4]}}\n",
     ")\n",
+    "\n",
     "collection.update_one(\n",
-    "    {'_id':104},\n",
-    "    {'$set':{'subject_ids':[2,5,1]}}\n",
-    ")\n",
-    "collection.update_one(\n",
-    "    {'_id':105},\n",
+    "    {'_id':103},\n",
     "    {'$set':{'subject_ids':[4,3]}}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 100, 'name': 'Amruth Pai', 'age': 26, 'grade': 'A', 'enrollment_date': datetime.datetime(2021, 11, 12, 0, 0), 'subject_ids': [1, 2, 3]}\n",
+      "{'_id': 101, 'name': 'Sharath Prabhu', 'age': 26, 'grade': 'B', 'enrollment_date': datetime.datetime(2024, 5, 12, 0, 0), 'subject_ids': [2, 3]}\n",
+      "{'_id': 102, 'name': 'Akshath Pai', 'age': 26, 'grade': 'A', 'enrollment_date': datetime.datetime(2024, 4, 12, 0, 0), 'subject_ids': [1, 4]}\n",
+      "{'_id': 103, 'name': 'Subhodh Kalley', 'age': 26, 'grade': 'C', 'enrollment_date': datetime.datetime(2023, 11, 12, 0, 0), 'subject_ids': [4, 3]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "students_updated=collection.find({})\n",
+    "for student in students_updated:\n",
+    "    print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -442,38 +462,19 @@
       "    ]\n",
       "}\n",
       "{\n",
-      "    \"_id\": 103,\n",
+      "    \"_id\": 102,\n",
       "    \"name\": \"Akshath Pai\",\n",
       "    \"age\": 26,\n",
       "    \"grade\": \"A\",\n",
       "    \"enrollment_date\": \"2024-04-12 00:00:00\",\n",
       "    \"subject_ids\": [\n",
-      "        \"control unit\",\n",
-      "        \"CAAD\",\n",
-      "        \"Advance Stats\",\n",
-      "        \"Data viz\"\n",
-      "    ],\n",
-      "    \"subject_details\": []\n",
-      "}\n",
-      "{\n",
-      "    \"_id\": 104,\n",
-      "    \"name\": \"Subhodh Kalley\",\n",
-      "    \"age\": 26,\n",
-      "    \"grade\": \"C\",\n",
-      "    \"enrollment_date\": \"2023-11-12 00:00:00\",\n",
-      "    \"subject_ids\": [\n",
-      "        2,\n",
-      "        5,\n",
-      "        1\n",
+      "        1,\n",
+      "        4\n",
       "    ],\n",
       "    \"subject_details\": [\n",
       "        {\n",
-      "            \"_id\": 2,\n",
-      "            \"name\": \"Business Analytics with R\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 5,\n",
-      "            \"name\": \"Applied ML\"\n",
+      "            \"_id\": 4,\n",
+      "            \"name\": \"Database Foundation\"\n",
       "        },\n",
       "        {\n",
       "            \"_id\": 1,\n",
@@ -482,11 +483,11 @@
       "    ]\n",
       "}\n",
       "{\n",
-      "    \"_id\": 105,\n",
-      "    \"name\": \"Chiranth \",\n",
+      "    \"_id\": 103,\n",
+      "    \"name\": \"Subhodh Kalley\",\n",
       "    \"age\": 26,\n",
-      "    \"grade\": \"A\",\n",
-      "    \"enrollment_date\": \"2024-01-12 00:00:00\",\n",
+      "    \"grade\": \"C\",\n",
+      "    \"enrollment_date\": \"2023-11-12 00:00:00\",\n",
       "    \"subject_ids\": [\n",
       "        4,\n",
       "        3\n",
@@ -507,7 +508,7 @@
    ],
    "source": [
     "#Q7 loopup to join subjects with students \n",
-    "import json\n",
+    "\n",
     "lookup_log=collection.aggregate(\n",
     "    [\n",
     "        {\n",
