--- a/school.ipynb
+++ b/school.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "DeleteResult({'n': 4, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "InsertManyResult([100, 101, 102, 103, 104], acknowledged=True)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "  'enrollment_date': datetime.datetime(2024, 1, 12, 0, 0)}]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "UpdateResult({'n': 4, 'nModified': 4, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "DeleteResult({'n': 1, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "InsertManyResult([1, 2, 3, 4, 5], acknowledged=True)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -425,20 +425,10 @@
       "        2,\n",
       "        3\n",
       "    ],\n",
-      "    \"subject_details\": [\n",
-      "        {\n",
-      "            \"_id\": 3,\n",
-      "            \"name\": \"Data visualization\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 2,\n",
-      "            \"name\": \"Business Analytics with R\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 1,\n",
-      "            \"name\": \"Advance Statistics\"\n",
-      "        }\n",
-      "    ]\n",
+      "    \"subject_details\": {\n",
+      "        \"_id\": 3,\n",
+      "        \"name\": \"Data visualization\"\n",
+      "    }\n",
       "}\n",
       "{\n",
       "    \"_id\": 101,\n",
@@ -450,16 +440,10 @@
       "        2,\n",
       "        3\n",
       "    ],\n",
-      "    \"subject_details\": [\n",
-      "        {\n",
-      "            \"_id\": 2,\n",
-      "            \"name\": \"Business Analytics with R\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 3,\n",
-      "            \"name\": \"Data visualization\"\n",
-      "        }\n",
-      "    ]\n",
+      "    \"subject_details\": {\n",
+      "        \"_id\": 3,\n",
+      "        \"name\": \"Data visualization\"\n",
+      "    }\n",
       "}\n",
       "{\n",
       "    \"_id\": 102,\n",
@@ -471,16 +455,10 @@
       "        1,\n",
       "        4\n",
       "    ],\n",
-      "    \"subject_details\": [\n",
-      "        {\n",
-      "            \"_id\": 1,\n",
-      "            \"name\": \"Advance Statistics\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 4,\n",
-      "            \"name\": \"Database Foundation\"\n",
-      "        }\n",
-      "    ]\n",
+      "    \"subject_details\": {\n",
+      "        \"_id\": 1,\n",
+      "        \"name\": \"Advance Statistics\"\n",
+      "    }\n",
       "}\n",
       "{\n",
       "    \"_id\": 103,\n",
@@ -492,16 +470,10 @@
       "        4,\n",
       "        3\n",
       "    ],\n",
-      "    \"subject_details\": [\n",
-      "        {\n",
-      "            \"_id\": 4,\n",
-      "            \"name\": \"Database Foundation\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": 3,\n",
-      "            \"name\": \"Data visualization\"\n",
-      "        }\n",
-      "    ]\n",
+      "    \"subject_details\": {\n",
+      "        \"_id\": 3,\n",
+      "        \"name\": \"Data visualization\"\n",
+      "    }\n",
       "}\n"
      ]
     }
@@ -518,7 +490,8 @@
     "                'foreignField':'_id',\n",
     "                'as':'subject_details'\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
+    "        {'$addFields':{'subject_details':{'$arrayElemAt':['$subject_details',0]}}}\n",
     "    ]\n",
     ")\n",
     "for data in lookup_log:\n",
